WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262425
REGRESSION(
268433@main
): [ iOS17 Sonoma ] 5 tests under http/wpt/mediarecorder are constantly crashing.
https://bugs.webkit.org/show_bug.cgi?id=262425
Summary
REGRESSION(268433@main): [ iOS17 Sonoma ] 5 tests under http/wpt/mediarecorde...
Ben Schwartz
Reported
2023-09-29 19:17:54 PDT
The following tests under http/wpt/mediarecorder/ are constantly crashing: http/wpt/mediarecorder/MediaRecorder-dataavailable.html http/wpt/mediarecorder/MediaRecorder-multiple-start-stop.html http/wpt/mediarecorder/MediaRecorder-requestData.html http/wpt/mediarecorder/pause-recording.html http/wpt/mediarecorder/record-96KHz-sources.html HISTORY:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=http%2Fwpt%2Fmediarecorder%2FMediaRecorder-dataavailable.html&test=http%2Fwpt%2Fmediarecorder%2FMediaRecorder-multiple-start-stop.html&test=http%2Fwpt%2Fmediarecorder%2FMediaRecorder-requestData.html&test=http%2Fwpt%2Fmediarecorder%2Fpause-recording.html&test=http%2Fwpt%2Fmediarecorder%2Frecord-96KHz-sources.html
CRASH LOG (stderr): /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX14.0.sdk/usr/include/c++/v1/optional:962: assertion this->has_value() failed: optional operator* called on a disengaged valuecom.apple.WebKit.WebContent.Development terminated (pid 73897) for reason: crash LEAK: 1 WebPageProxy CRASH LOG URL:
https://build.webkit.org/results/Apple-Sonoma-Debug-AppleSilicon-WK2-Tests/268677@main%20(32)/http/wpt/mediarecorder/MediaRecorder-dataavailable-crash-log.txt
REPRODUCIBILITY: I was able to reproduce this issue on macOS Sonoma (14.0, 23A344/arm64) ToT using the following command: run-webkit-tests --clobber-old-results --verbose http/wpt/mediarecorder/MediaRecorder-dataavailable.html http/wpt/mediarecorder/MediaRecorder-multiple-start-stop.html http/wpt/mediarecorder/MediaRecorder-requestData.html http/wpt/mediarecorder/pause-recording.html http/wpt/mediarecorder/record-96KHz-sources.html REGRESSION: I was able to bisect a possible regression point at
268433@main
. This issue did not reproduce before then, and changes at that point appear to be directly related to the issue.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-09-29 19:18:08 PDT
<
rdar://problem/116267156
>
EWS
Comment 2
2023-09-29 19:51:38 PDT
Test gardening commit
268685@main
(1c8170822ba4): <
https://commits.webkit.org/268685@main
> Reviewed commits have been landed. Closing PR #18455 and removing active labels.
youenn fablet
Comment 3
2023-10-03 01:00:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18542
EWS
Comment 4
2023-10-03 07:42:59 PDT
Committed
268775@main
(eb2233a41bba): <
https://commits.webkit.org/268775@main
> Reviewed commits have been landed. Closing PR #18542 and removing active labels.
Alexey Proskuryakov
Comment 5
2023-10-03 10:10:09 PDT
We still need to re-enable the tests.
EWS
Comment 6
2023-10-03 11:53:24 PDT
Test gardening commit
268795@main
(5c5277763eef): <
https://commits.webkit.org/268795@main
> Reviewed commits have been landed. Closing PR #18566 and removing active labels.
Ben Schwartz
Comment 7
2024-06-03 10:31:13 PDT
This no longer appears to be occurring. Removing test expectations. Please file a new bug if issues persist. Tracking test expectations removal in
bug #274990
(
rdar://129080660
).
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug