REGRESSION(268433@main): [ iOS17 Sonoma ] 5 tests under http/wpt/mediarecorder are constantly crashing. https://bugs.webkit.org/show_bug.cgi?id=262425 rdar://116267156

Reviewed by Eric Carlson.

We need to check that m_timeSlice has a value in MediaRecorder::requestData before using it.
Covered by existing tests.

* Source/WebCore/Modules/mediarecorder/MediaRecorder.cpp:
(WebCore::MediaRecorder::requestData):

Canonical link: https://commits.webkit.org/268775@main